# tsqlremaker

./: .gitattributes  .gitignore  .mcp.json  .opencode.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REPOSITORY_ANALYSIS_REPORT.md  WHITEBOARD.md  cliff.toml  test_eq.rs
.cargo/: config.toml
.claude/: CLAUDE.md  mcp.json  progress_summary.md  ralph-loop.local.md  rust-hooks.json  settings.local.json
.claude/agents/: design-reviewer.md  magi-balthasar.md  magi-casper.md  magi-judge.md  magi-melchior.md  magi-supervisor.md  magi-system.md  requirements-reviewer.md  rust-tdd-guide.md  spec-parallel-impl-coordinator.md  spec-tdd-impl-worktree-agent.md
.claude/commands/: review-design.md  review-requirements.md  rust-arch.md  rust-tdd.md
.claude/hooks/: pre-commit-check.sh
.claude/rules/: agent-prompt-template.md  api-migration-strategy.md  architecture-coupling-balance.md  dependency-version-compatibility.md  git-branch-strategy.md  git-commit-attribution.md  lsp-use-case-template.md  parallel-impl-workflow.md  pre-commit-rust.md  pre-implementation-checklist.md  project-ast-types.md  rust-anti-patterns.md  rust-lsp-analysis.md  rust-style.md  rust-test.md  tdd-coupling.md  user-prompt-quality.md  workspace-lint-allowances.md
.claude/skills/: context-backup.md  lsp-server.md  project-api-explorer.md  rust-parser.md  rust-tdd.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  sql_dialect.yml
.github/actions-rs/: grcov.yml
.github/scripts/: ase-rs-askpass.sh
.github/workflows/: ci.yml  codecov.yml  (+4 more)
.serena/: project.yml
.tmp/: issue_block_errors.md  issue_constraints.md  issue_design_doc.md  issue_eof_position.md  issue_error_position.md  issue_exists.md  issue_param_default.md  issue_recursion_depth.md  issue_tokenbuffer.md  simplified_impl_analysis_report.md
crates/ase-ls/: Cargo.toml
crates/ase-ls-core/: Cargo.toml
crates/ase-ls-core/src/: analysis.rs  code_actions.rs  code_lens.rs  completion.rs  config.rs  db_docs.rs  definition.rs  diagnostics.rs  document_links.rs  folding.rs  formatting.rs  hover.rs  incremental.rs  inlay_hints.rs  lib.rs  line_index.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs  span_resolve.rs  symbol_store.rs  symbols.rs  workspace_index.rs  workspace_symbols.rs
crates/ase-ls-core/src/db_docs/: datatypes.rs  functions.rs  keywords.rs  mod.rs  sysvars.rs
crates/ase-ls-core/src/symbol_table/: mod.rs
crates/ase-ls/src/: config.rs  error_taxonomy.rs  lib.rs  main.rs  panic_recovery.rs  server.rs
crates/ase-ls/tests/: integration.rs
crates/common-sql/: Cargo.toml
crates/common-sql/src/: data_type.rs  expression.rs  lib.rs  statement.rs  visitor.rs
crates/common-sql/src/ast/: clause.rs  datatype.rs  ddl.rs  expression.rs  identifier.rs  join.rs  literal.rs  mod.rs  span.rs  statement.rs
crates/common-sql/tests/: reexport_ddl.rs  reexport_dml.rs  scaffold_tests.rs  visitor_tests.rs
crates/mysql-emitter/: Cargo.toml
crates/mysql-emitter/src/: config.rs  ddl.rs  emitter.rs  error.rs  lib.rs  statement.rs
crates/mysql-emitter/src/converters/: datatype.rs  function.rs  mod.rs  syntax.rs
crates/mysql-emitter/tests/: emit_test.rs
crates/mysql-emitter/tests/fixtures/: delete.sql  insert.sql  select.sql  update.sql
crates/postgresql-emitter/: Cargo.toml
crates/postgresql-emitter/src/: config.rs  ddl.rs  error.rs  lib.rs
crates/postgresql-emitter/src/mappers/: datatype.rs  expression.rs  function.rs  identifier.rs  mod.rs  select_statement.rs
crates/postgresql-emitter/tests/: emit_test.rs
crates/schema-diff/: Cargo.toml
crates/schema-diff/src/: catalog.rs  dialect.rs  diff.rs  emit.rs  lib.rs  mapper.rs  warning.rs
crates/schema-diff/src/adapters/: ase.rs  json.rs  mod.rs
crates/schema-diff/tests/: adapters_wiring.rs  cli_e2e.rs  cli_e2e_add_column.rs  cli_e2e_graceful_exit.rs  cli_e2e_uc2_uc3.rs
crates/sqlite-emitter/: Cargo.toml
crates/sqlite-emitter/src/: config.rs  ddl.rs  error.rs  function_mapper.rs  lib.rs
crates/sqlite-emitter/src/converters/: function.rs  mod.rs
crates/sqlite-emitter/tests/: emit_test.rs
crates/tsql-lexer/: Cargo.toml
crates/tsql-lexer/benches/: lexer_bench.rs
crates/tsql-lexer/src/: cursor.rs  error.rs  lexer.rs  lib.rs
crates/tsql-lexer/tests/: integration_test.rs
crates/tsql-parser/: Cargo.toml
crates/tsql-parser/benches/: parser_bench.rs
crates/tsql-parser/src/: ast.rs  buffer.rs  error.rs  expression.rs  lib.rs  parser.rs
crates/tsql-parser/src/ast/: base.rs  batch.rs  control_flow.rs  data_modification.rs  ddl.rs  expression.rs  mod.rs  select.rs  tests.rs  to_common.rs  to_common_sql.rs  to_common_sql_tests.rs
crates/tsql-parser/src/common/: convert_common_sql.rs  expression.rs  mod.rs  statement.rs
crates/tsql-parser/src/expression/: binary.rs  function.rs  mod.rs  prefix.rs  special.rs
crates/tsql-parser/src/expression/tests/: functions.rs  literals.rs  mod.rs  operators.rs  special.rs  subquery.rs
crates/tsql-parser/src/parser/: control_flow.rs  ddl.rs  dml.rs  helpers.rs  misc.rs  mod.rs  select.rs  tests.rs
crates/tsql-parser/tests/: common_ast_conversion.rs  convert_common_sql_bridge.rs  dogfood_parse.rs  dogfood_quality.rs  dogfooding_fixtures.rs  integration_test.rs
crates/tsql-token/: Cargo.toml
crates/tsql-token/src/: keyword.rs  kind.rs  lib.rs  position.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: ast_convert.rs  ast_js.rs  lib.rs  token_js.rs
crates/wasm/tests/: ddl_parity.rs
docs/: EXECUTIVE_SUMMARY.md  LEXER_ROADMAP.md  QUICK_REFERENCE.md  SAP_ASE_TSQL_DIALECT_ANALYSIS.md  SDD.md  lsp-defacto-standards.md  lsp-feature-roadmap.md  retrospective-2026-04-17.md  retrospective-2026-04-18.md  retrospective-2026-04-19.md  retrospective-2026-05-16.md
dogfooding/: CHECKLIST.md  RESULTS.md  dogfood_test.rs
src/: lib.rs  main.rs
tsql-lexer/: Cargo.toml
tsql-token/: Cargo.toml
web/: index.html  serve.bat  serve.sh  style.css
(+59 files in other folders)
