[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# 共通バージョン管理
once_cell = "1.19"
thiserror = "2.0"
rstest = "0.26"
proptest = "1.4"
criterion = "0.5"

[workspace.metadata.cargo-semver-check]
# セマンティックバージョニングのチェック

[workspace.lints.clippy]
# panic/expect/unwrap をライブラリコードで禁止
panic = "deny"
expect_used = "deny"
# テストコードでの使用は許可（個別クレートで #[cfg(test)] で設定）
unwrap_used = "deny"
