[workspace]
members = [
    "crates/tsql-token",
    "crates/tsql-lexer",
    "crates/tsql-parser",
    "crates/mysql-emitter",
    "crates/postgresql-emitter",
    "crates/sqlite-emitter",
    "crates/ase-ls-core",
    "crates/ase-ls",
    "crates/wasm",
]
resolver = "2"

[workspace.dependencies]
# 共通バージョン管理
once_cell = "1.21"
thiserror = "2.0"
rstest = "0.26"
proptest = "1.10"
criterion = "0.5"

[workspace.metadata.cargo-semver-check]
# セマンティックバージョニングのチェック

[workspace.lints.clippy]
# panic/expect/unwrap をライブラリコードで禁止
panic = "deny"
expect_used = "deny"
# テストコードでの使用は許可（個別クレートで #[cfg(test)] で設定）
unwrap_used = "deny"
