[package]
name = "ase-ls"
version = "0.1.0"
edition = "2021"
authors = ["TSQL Remaker Contributors"]
description = "SAP ASE (Sybase) Language Server for VSCode and Zed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protom512/tsqlremaker"

[[bin]]
name = "ase-ls"
path = "src/main.rs"

[dependencies]
ase-ls-core = { path = "../ase-ls-core" }
tsql-parser = { path = "../tsql-parser" }
tsql-lexer = { path = "../tsql-lexer" }
tsql-token = { path = "../tsql-token" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
lsp-types = "0.94"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
rstest = { workspace = true }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
