[package]
name = "postgresql-emitter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["T-SQL Remaker Contributors"]
description = "PostgreSQL SQL emitter for Common SQL AST"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/tsqlremaker"

[dependencies]
# P1 結合負債是正 (architecture §1.2 / Req 17 / Issue #157): common-sql のみに依存し、
# tsql-parser / tsql-token への直接依存を廃止した。PR #152 (mysql-emitter) と同一パターン。
common-sql = { path = "../common-sql" }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
