[package]
name = "schema-diff"
version = "0.1.0"
edition = "2021"
description = "Schema diff engine: computes DDL migration plans between a catalog and a desired schema."
license = "MIT"

# T6 scope: crate skeleton with catalog model + mapper + warning.
#
# The `ase` feature and its `ase-rs` git dependency are intentionally NOT
# declared here yet. Cargo resolves optional git dependencies even on default
# builds to read their metadata, and ase-rs lives in a private upstream that
# requires authentication — declaring it now would break the T6 quality gate
# (`cargo check -p schema-diff`) and every workspace command for all developers.
#
# T9 will add the `[features] ase = ["dep:ase-rs"]` line and the
# `[dependencies.ase-rs] git = "..." optional = true` block alongside the
# `#[cfg(feature = "ase")]` AseCatalogProvider in `src/adapters/ase.rs`.
# This matches spec tasks.md line 253: "crates/schema-diff/Cargo.toml: T6 (作成)
# → T9 (ase feature 行追加)".

[dependencies]
common-sql = { path = "../common-sql" }
# T7: `build_desired_schema` parses DDL via `tsql_parser::parse_with_errors`
# and lifts it through `tsql_parser::ast::to_common_sql::to_common_sql` before
# mapping into `CatalogSchema`. The dependency direction is one-way
# (schema-diff -> tsql-parser -> common-sql); tsql-parser does NOT depend on
# schema-diff, so the workspace DAG stays clean (verified with `cargo tree`).
tsql-parser = { path = "../tsql-parser" }
# T8.1: serde/serde_json are NON-DEV dependencies used by JsonCatalogProvider
# (T8.3) to deserialize the catalog JSON wire-format into CatalogSchema via a
# private DTO. Pinned directly (NOT `{workspace=true}`) because serde is NOT a
# workspace dependency — it is declared per-crate (ase-ls-core/ase-ls/wasm)
# using this exact convention. Matching ase-ls-core keeps the version contract
# identical across the workspace and avoids a {workspace=true} resolution
# failure (serde is absent from [workspace.dependencies]).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
