[package]
name = "schema-diff"
version = "0.1.0"
edition = "2021"
description = "Schema diff engine: computes DDL migration plans between a catalog and a desired schema."
license = "MIT"

# T11.1: `[[bin]]` target declared explicitly so `cargo build -p schema-diff`
# (and `cargo nextest run -p schema-diff` integration tests via `cargo_bin`)
# resolve the binary target. Added here ahead of T11.2 (binary implementation)
# to keep the manifest stable across the remaining T11 tasks. The entry file
# `src/bin/schema-diff.rs` ships as a minimal stub in T11.1 so the crate stays
# compilable with default features (AC-5/AC-6); T11.2 replaces the stub with
# the real clap-driven CLI.
[[bin]]
name = "schema-diff"
path = "src/bin/schema-diff.rs"

# T6 created the crate skeleton (catalog model + mapper + warning). T9 added
# the `ase` feature + the `ase-types` / `ase-driver` optional git deps below;
# both stay behind `default = []` so the default publishable build (T11 CLI)
# never resolves the private upstream (design §0.1 / AC-5 / AC-6). The
# matching `#[cfg(feature = "ase")]` adapter lives in
# `src/adapters/ase.rs` (T9.1).

# T9: `ase` feature — live ASE catalog introspection via the ase-rs upstream
# (design §0.1 / §3.5). The upstream (`https://github.com/Sou-Tokuda/ase-rs`)
# is a private git workspace (requires authentication), so it MUST stay
# `optional = true` behind `default = []` — otherwise the default publishable
# build (T11 CLI) breaks for every developer and CI run (AC-5/AC-6).
#
# CTO 2026-07-14 condition: the upstream root Cargo.toml is `[workspace]`-only
# (NO `[lib]`), so `dep:ase-rs` in design §6.1 is unresolvable. The real
# crates are the workspace members `ase-driver` (live `Connection`) and
# `ase-types` (owns `AseDataType`). `ase-driver` does NOT re-export
# `AseDataType` (verified: `ase-driver/src/lib.rs` exports only
# connection/error/rpc/statement/transaction), so `map_ase_type` must depend
# on `ase-types` directly to name `AseDataType` in its signature.
[features]
default = []
# Live ASE catalog access. Off by default — the T11 CLI uses the JSON provider
# path (`adapters::json`) so it builds without resolving the private upstream.
#
# T9.3 wires the live connection path (`AseCatalogProvider`), which needs
# `ase-dsn` (DSN string → `ConnectionConfig`) and `ase-tds`
# (`TdsConnection::connect`) in addition to the T9.1 deps `ase-types`
# (`AseDataType`) and `ase-driver` (high-level `Connection`). `tokio` is the
# runtime that drives the `async` driver query from the sync
# `CatalogProvider::load_schema` trait method (design §3.5 async note).
ase = ["dep:ase-types", "dep:ase-driver", "dep:ase-dsn", "dep:ase-tds", "dep:tokio"]

[dependencies]
# T9: `ase-types` owns the `AseDataType` enum used by `map_ase_type`. Optional
# + git so the default build never resolves the private upstream.
ase-types = { git = "https://github.com/Sou-Tokuda/ase-rs", optional = true }
# T9: `ase-driver` owns the live `Connection` held by `AseCatalogProvider`.
# Same private upstream; gated behind the `ase` feature so the default
# publishable build never resolves it (design §0.1 / AC-5 / AC-6).
ase-driver = { git = "https://github.com/Sou-Tokuda/ase-rs", optional = true }
# T9.3: `ase-dsn` parses a DSN string into a `ConnectionConfig`; `ase-tds`
# owns `TdsConnection::connect(config)`. Both are workspace members of the
# same private upstream and are needed to bridge a caller-supplied DSN string
# to the `ase_driver::Connection`. All `optional` so the default build never
# resolves the upstream (design §0.1 / AC-5 / AC-6).
ase-dsn = { git = "https://github.com/Sou-Tokuda/ase-rs", optional = true }
ase-tds = { git = "https://github.com/Sou-Tokuda/ase-rs", optional = true }
# T9.3: `ase_driver::Connection::query` is `pub async fn`, but the
# `CatalogProvider::load_schema` trait contract is sync. The adapter drives the
# async query to completion on a private `tokio::runtime::Runtime` via
# `block_on` (design §3.5 async-boundary note). `current_thread` + `enable_all`
# is sufficient (schema introspection is not CPU-parallel). Only pulled in
# under the `ase` feature; `default-features = false` keeps the dep minimal.
tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }

# T11.1: `clap` with `derive` powers the `#[derive(Parser)]` CLI struct added in
# T11.2. Convention matches ase-ls/Cargo.toml:22 verbatim
# (`clap = { version = "4", features = ["derive"] }`). Pinned directly
# (NOT `{workspace=true}`) because clap is NOT a workspace dependency — it is
# declared per-binary-crate using this exact form.
clap = { version = "4", features = ["derive"] }
common-sql = { path = "../common-sql" }
# T7: `build_desired_schema` parses DDL via `tsql_parser::parse_with_errors`
# and lifts it through `tsql_parser::ast::to_common_sql::to_common_sql` before
# mapping into `CatalogSchema`. The dependency direction is one-way
# (schema-diff -> tsql-parser -> common-sql); tsql-parser does NOT depend on
# schema-diff, so the workspace DAG stays clean (verified with `cargo tree`).
tsql-parser = { path = "../tsql-parser" }
# T8.1: serde/serde_json are NON-DEV dependencies used by JsonCatalogProvider
# (T8.3) to deserialize the catalog JSON wire-format into CatalogSchema via a
# private DTO. Pinned directly (NOT `{workspace=true}`) because serde is NOT a
# workspace dependency — it is declared per-crate (ase-ls-core/ase-ls/wasm)
# using this exact convention. Matching ase-ls-core keeps the version contract
# identical across the workspace and avoids a {workspace=true} resolution
# failure (serde is absent from [workspace.dependencies]).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
# T11.2: the three dialect emitters are runtime dependencies because the CLI
# binary dispatches to the selected `--dialect` emitter to render the migration
# statements into SQL text on STDOUT. Dependency direction stays strictly
# downward (schema-diff -> {mysql,postgresql,sqlite}-emitter -> common-sql);
# no emitter depends on schema-diff, so the workspace DAG stays clean.
mysql-emitter = { path = "../mysql-emitter" }
postgresql-emitter = { path = "../postgresql-emitter" }
sqlite-emitter = { path = "../sqlite-emitter" }

[dev-dependencies]
rstest = { workspace = true }
# T11.3: `assert_cmd` resolves the `schema-diff` binary target via
# `cargo_bin("schema-diff")` (stdlib `current_exe`-based resolution; works on
# Rust 1.85+, the workspace ships 1.95) so the integration test can drive the
# published binary as a black box. `predicates` backs the STDOUT substring
# matchers. Both are dev-only — they never reach the published artifact.
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
