[package]
name = "sqlite-emitter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["T-SQL Remaker Contributors"]
description = "SQLite SQL emitter for Common SQL AST"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/tsqlremaker"

[dependencies]
# P1 結合負債是正 (architecture §1.2 / Req 17): common-sql のみに依存し、
# tsql-parser / tsql-token への直接依存を廃止した。
# PR #152 (mysql-emitter) / PR #159 (postgresql-emitter) と同一パターン。
common-sql = { path = "../common-sql" }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
# テストでの T-SQL → common_sql 変換フィクスチャ構築のみに使用 (lib 本体は非依存)。
tsql-parser = { path = "../tsql-parser" }

[lints]
workspace = true
